--- a/Docker/landing_x86_64/Dockerfile
+++ b/Docker/landing_x86_64/Dockerfile
@@ -42,4 +42,6 @@ RUN git clone --recursive https://github.com/JeremyBYU/OrganizedPointFilters.git
     cd lib/python_package && pip install . && \
     rm -rf /opt/opf
 
+RUN pip install multiprocessing-logging
+
 CMD ["bash"]
