Updated Pose Transformations

--- a/config/landing/landing.yml
+++ b/config/landing/landing.yml
@@ -46,8 +46,48 @@ polygon:
                 min: 0.5 # m^2
                 max: 400
         # These parameters correspond to Shapely polygon geometry operations
-        positive_buffer: 0.1 # m, Positively expand polygon.  Fills in small holes
+        positive_buffer: 0.05 # m, Positively expand polygon.  Fills in small holes
         negative_buffer: 0.1 # m, Negative buffer to polygon. Expands holes and constricts outer hull of polygon
-        simplify: 0.1 # m, simplify edges of polygon
+        simplify: 0.05 # m, simplify edges of polygon
 polylabel:
     precision: 0.1
+
+# Defining Fixed Homogenous Transformations
+# Everything is in relation to the body frame of the drone
+# Origin: Center of drone but at ground level, where landing gear touches ground.
+# Axes: NED, X-Forward, Y-Right, Z-Down
+frames:
+    # The t265_sensor_mount origin is near center of the 265 camera. It keeps the same NED frame as the body for simplicity.  X-Forward, Y-Right, Z-Down
+    t265_sensor_mount:
+        #translation [0.5, 0.0, -0.5] # Example: this is saying the t265 is 0.5 meters to the right and 0.5 up from drone origin 
+        translation: [1.0, 0.0, 0] # TODO UPDATE 
+        rotation: # Theses rotations are defined from the drone frame to the sensor mount frame
+            roll: 0.0
+            pitch: 0.0  # TODO UPDATE
+            yaw: 0.0
+    # This transform represents the **internal** sensor coordinate frame of the t265
+    # Its axes are Y-UP, Z-Back, X-Right (virtual reality headset standard axes frames, ohh Intel....)
+    t265_sensor_axes:
+        translation: [0.0, 0.0, 0.0] # leave at 0
+        rotation: [ # x -> y, y -> -z  z -> -x # leave as is
+        [0,  0, -1],
+        [1,  0, 0],
+        [0, -1, 0]
+        ]
+    # The l515_sensor_mount origin is near center of the l515 camera. It keeps the same NED frame as the body for simplicity.  X-Forward, Y-Right, Z-Down
+    l515_sensor_mount:
+        #translation [0.5, 0.0, -0.5] # Example: this is saying the l515 is 0.5 meters to the right and 0.5 up from drone origin 
+        translation: [0.1, 0.1, -0.1] # TODO UPDATE 
+        rotation:   # Theses rotations are defined from the drone frame to the sensor mount frame
+            roll: 0.0          
+            pitch: 0.0  # TODO UPDATE, POSITIVE MEANS THE CAMERA IS POINTING DOWNWARD
+            yaw: 0.0
+    # This transform represents the **internal** sensor coordinate frame of the l515
+    # Its axes standard camera frame: Z-Forward, X-Right, Y-Down
+    l515_sensor_axes:
+        translation: [0.0, 0.0, 0.0] # leave at 0
+        rotation: [ #  x -> y, y -> z, z -> x # leave as is
+        [0, 0, 1],
+        [1, 0, 0],
+        [0, 1, 0]
+      ]
