--- a/config/landing/landing.yml
+++ b/config/landing/landing.yml
@@ -52,6 +52,8 @@ polygon:
 polylabel:
     precision: 0.1
 
+single_scan:
+    command_frame: "body" # 'body' or 'world'
 # Defining Fixed Homogenous Transformations
 # Everything is in relation to the body frame of the drone
 # Origin: Center of drone but at ground level, where landing gear touches ground.
@@ -60,7 +62,7 @@ frames:
     # The t265_sensor_mount origin is near center of the 265 camera. It keeps the same NED frame as the body for simplicity.  X-Forward, Y-Right, Z-Down
     t265_sensor_mount:
         #translation [0.5, 0.0, -0.5] # Example: this is saying the t265 is 0.5 meters to the right and 0.5 up from drone origin 
-        translation: [1.0, 0.0, 0] # TODO UPDATE 
+        translation: [0.0, 0.0, 0] # TODO UPDATE 
         rotation: # Theses rotations are defined from the drone frame to the sensor mount frame
             roll: 0.0
             pitch: 0.0  # TODO UPDATE
@@ -77,7 +79,7 @@ frames:
     # The l515_sensor_mount origin is near center of the l515 camera. It keeps the same NED frame as the body for simplicity.  X-Forward, Y-Right, Z-Down
     l515_sensor_mount:
         #translation [0.5, 0.0, -0.5] # Example: this is saying the l515 is 0.5 meters to the right and 0.5 up from drone origin 
-        translation: [0.1, 0.1, -0.1] # TODO UPDATE 
+        translation: [0.0, 0.0, 0] # TODO UPDATE 
         rotation:   # Theses rotations are defined from the drone frame to the sensor mount frame
             roll: 0.0          
             pitch: 0.0  # TODO UPDATE, POSITIVE MEANS THE CAMERA IS POINTING DOWNWARD
@@ -91,3 +93,10 @@ frames:
         [1, 0, 0],
         [0, 1, 0]
       ]
+    
+# If the t265 and the l515 are rigidly attached to a backplate then:
+#   1. The sensor mount_rotations will be identical!
+#   2. Only the translations would marginally change
+
+# If the t265 and L515 are NOT rigidly attached
+#    1. The rotation and translation will be greatly decoupled
