--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -45,7 +45,7 @@ set(PROTO_DIR "${PROJECT_SOURCE_DIR}/proto")
 set(PROTO_FILES ${PROTO_DIR}/Common.proto  ${PROTO_DIR}/ImageMessage.proto 
                 ${PROTO_DIR}/PointCloudMessage.proto  ${PROTO_DIR}/IMUMessage.proto 
                 ${PROTO_DIR}/PoseMessage.proto ${PROTO_DIR}/Integrate.proto
-                ${PROTO_DIR}/LandingMessage.proto)
+                ${PROTO_DIR}/LandingMessage.proto ${PROTO_DIR}/TouchdownMessage.proto)
 
 PROTOBUF_GENERATE_CPP(PROTO_SRCS PROTO_HDRS ${PROTO_FILES})
 protobuf_generate_python(PY_SOURCES ${PROTO_FILES})
