--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ build
 cmake-build
 dk-x86_64-build
 dk-aarch64-build
+
+docker_images/*
+!docker_images/README.md
+
+logs
+!logs/.gitignore
+
 lib
 .vscode/.ropeproject
 *.pyc
