--- a/config/l515/rspub_default.toml
+++ b/config/l515/rspub_default.toml
@@ -31,8 +31,8 @@ active = true
 [[pipeline_streams]]
 device_name = "Intel RealSense L515"
 stream_name = "Color"
-width = 640
-height = 480
+width = 1280 #640
+height = 720 #480
 framerate = 30
 format = "BGR8"
 active = true
